fix: adjust several Sonar hints (#17)
- #16
- use default TransformerFactory
- add missing unit tests

Co-authored-by: Jelmen Guhlke <mail@jguhlke.de>